test_src/compiler_errors/types/boolean/IfNumberError.b
class IfNumberError {
    void test() {
        if (1)
            println(2);
        else
            println(3);
    }
}
